force-app/main/default/objects/numm__EntityAffectationUser__c/numm__EntityAffectationUser__c.object-meta.xml
<CustomObject>
    <label>Affectation utilisateur</label>
    <nameField>
        <displayFormat>EAU-{000000}</displayFormat>
        <label>Nom de AffectationUserEntite</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affectations utilisateurs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>