force-app/main/default/objects/numm__EntityAffectationUser__c/fields/numm__RTiers__c.field-meta.xml
<CustomField>
    <fullName>numm__RTiers__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tiers</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__Entite__c</field>
            <operation>equals</operation>
            <valueField>$Source.numm__Entity__c</valueField>
        </filterItems>
        <filterItems>
            <field>numm__ThirdPartyRule__c.numm__IdctrlAccounting__r.numm__TypeDeCollectif__c</field>
            <operation>equals</operation>
            <value>SAL</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Affectations utilisateurs</relationshipLabel>
    <relationshipName>Affectations_utilisateurs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>