force-app/main/default/objects/numm__EntityAffectationUser__c/fields/numm__TechUniqUser__c.field-meta.xml
<CustomField>
    <fullName>numm__TechUniqUser__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>TechUniqUser</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>