force-app/main/default/objects/numm__EntityAffectationUser__c/fields/numm__User__c.field-meta.xml
<CustomField>
    <fullName>numm__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utilisateur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Affectations_utilisateurs</relationshipName>
    <type>Lookup</type>
</CustomField>